# ScheduleFirst-AI

./: .gitignore  CUNY-Global-Integration.md  CUNY-PRD.md  README.md  SUPABASE_GUIDE.md  WARP.md  index.html  package-lock.json  package.json  vite.config.ts  walkthrough.md
services/: .env.example  README.md  api_server.py  integration_test_output.txt  integration_test_output_2.txt  integration_test_output_3.txt  locustfile.py  pyproject.toml  test_output.txt
services/background_jobs/: __init__.py  scheduler.py
services/background_jobs/jobs/: __init__.py  scrape_reviews.py  sync_cuny_courses.py  update_professor_grades.py
services/mcp_server/: __init__.py  config.py  main.py
services/mcp_server/models/: __init__.py  api_models.py  course.py  professor.py  schedule.py  sync_metadata.py
services/mcp_server/services/: __init__.py  browser_use_cuny_connector.py  constraint_solver.py  cuny_global_search_scraper.py  cuny_ingestion_contract.py  cuny_ingestion_orchestrator.py  data_freshness_service.py  data_population_service.py  ratemyprof_scraper.py  sentiment_analyzer.py  supabase_service.py
services/mcp_server/tests/: conftest.py  test_browser_use_cuny_connector.py  test_cache.py  test_caching_integration.py  test_chat_tool_result_selection.py  test_circuit_breaker.py  test_cuny_global_search_scraper.py  test_cuny_ingestion_contract.py  test_cuny_ingestion_orchestrator.py  test_data_freshness_service.py  test_integration.py  (+4 more)
services/migrations/: 001_hybrid_impl.sql
services/requirements/: base.txt  dev.txt  prod.txt
services/scripts/: cleanup_logs.py
(+131 files in other folders)
