[tool.poetry]
name = "cuny-schedule-optimizer-backend"
version = "0.1.0"
description = "Backend services for CUNY AI Schedule Optimizer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mcp_server"}, {include = "background_jobs"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^0.2.0"
google-genai = "^1.0.0"
supabase = "^2.4.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.18.0"
browser-use = "^0.1.38"
httpx = "^0.26.0"

apscheduler = "^3.10.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
tenacity = "^8.2.3"

uvicorn = "^0.27.0"
fastapi = "^0.109.0"
python-multipart = "^0.0.9"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mcp_server/tests", "background_jobs/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
